# Verifier-Grounded-Chemical-Benchmark

./: .gitignore  AGENTS.md  pyproject.toml
benchmark/: __init__.py  answer_extraction.py  evaluate.py  verifier_scripts.py
data/: xtb_real_dataset_sources.yaml
doc/: 2026-06-02-atomisticskills-tools-verifier-analysis.md  INITIAL-DESIGN.md  RDKit.md  initial-design.md  xTB.md
docs/design/: INITIAL-DESIGN.md  Limits.md  expert-open-generation-tasks-009-013.md  task-prompt-wording-guidelines.md  unified-linear-goal-scoring.md  xtb-task-quality-evaluation.md
docs/research/: 2026-05-26-verifier-grounded-chemical-benchmark-target-properties.md  2026-06-02-atomisticskills-tools-verifier-analysis.md  2026-06-15-xtb-calibration-reliability-report.md  2026-06-15-xtb-real-dataset-property-distributions.md  2026-06-29-admet-opera-materials-verifier-deployment-report.md  2026-06-30-end-to-end-property-ml-model-candidates.md  2026-06-30-lightweight-md-forcefield-verifier-candidates.md  2026-06-30-verifier-backend-method-coverage-gap-report.md  2026-07-01-rdkit-forcefield-extended-property-candidates.md  2026-07-02-classical-ml-qsar-property-verifier-candidates.md  2026-07-03-top20-deployable-physchem-quantum-material-ml-property-models.md  2026-07-06-openmm-openff-local-env-validation.md  2026-07-06-verifier-backend-property-inventory.md  2026-07-13-expert-open-generation-xtb-calibration.md  2026-07-14-release-consistency-validation.md  2026-07-16-probabilistic-constraint-satisfaction-scoring.md  2026-07-21-xtb-advanced-property-linear-goal-dossier.md  2026-07-21-xtb-gap-dipole-linear-goal-dossier.md  2026-07-21-xtb-total-energy-linear-goal-dossier.md  2026-07-23-expert-open-generation-009-013-calibration.md
docs/tracks/: MACE-MP.md  MolGpKa.md  OpenMM-OpenFF.md  PropertyCalculation.md  RDKit-Forcefield.md  RDKit.md  SolTranNet.md  TorchANI.md  xTB.md
envs/: crest-xtb.yml  openmm-openff.yml
releases/v0.1.1/: SHA256SUMS  manifest.json  task-inventory.json
releases/v0.2.0/: SHA256SUMS  manifest.json  scoring-profiles.json  task-inventory.json
releases/v0.3.0/: SHA256SUMS  manifest.json  scoring-profiles.json  task-inventory.json
releases/v0.4.0/: SHA256SUMS  manifest.json  scoring-profiles.json  task-inventory.json
scripts/: __init__.py  analyze_xtb_real_dataset_distribution.py  check_admet_ai_env.py  check_atomisticskills_env.py  check_atomisticskills_mace_env.py  check_atomisticskills_matgl_env.py  check_core_env.py  check_mace_mp_env.py  check_matgl_env.py  check_molgpka_env.py  check_openmm_openff_env.py  check_opera_env.py  check_soltrannet_env.py  check_torchani_env.py  check_xtb_env.py  check_xtb_xyz_samples.py  convert_xtb_real_dataset_geom_pickle.py  convert_xtb_real_dataset_sdf.py  inspect_xtb_real_dataset_availability.py  prepare_xtb_real_dataset_sample.py  run_xtb_calibration.py  run_xtb_real_dataset_distribution.py  score_answers.py  setup_atomisticskills_first_batch.sh  setup_atomisticskills_mace.sh  setup_atomisticskills_matgl.sh
scripts/env/: __init__.py  check_admet_ai_env.py  check_mace_mp_env.py  check_matgl_env.py  check_molgpka_env.py  check_openmm_openff_env.py  check_soltrannet_env.py  check_torchani_env.py  check_xtb_env.py
scripts/release/: __init__.py  build_release.py
scripts/validation/: check_xtb_xyz_samples.py
scripts/xtb_calibration/: __init__.py  analyze_xtb_calibration.py  generate_expert_candidates.py  run_xtb_calibration.py
scripts/xtb_real_dataset/: __init__.py  (+6 more)
tests/: test_admet_ai_env_script.py  test_admet_ai_properties_backend.py  test_admet_ai_task_scripts.py  test_answer_extraction.py  test_atomisticskills_adapters.py  test_atomisticskills_check_script.py  test_atomisticskills_mace_scripts.py  test_atomisticskills_matgl_material_tasks.py  test_atomisticskills_matgl_properties_backend.py  test_atomisticskills_matgl_scripts.py  test_atomisticskills_matgl_task_scripts.py  test_atomisticskills_setup_script.py  test_atomisticskills_verifiers.py  test_docker_model_runtime.py  test_evaluate_routing.py  test_installed_wheel.py  test_mace_material_tasks.py  test_mace_mp_properties_backend.py  test_mace_properties_backend.py  test_mace_task_scripts.py  test_matgl_env_script.py  test_matgl_material_tasks.py  test_matgl_properties_backend.py  test_matgl_task_scripts.py  test_mlip_optional_dependencies.py  test_molgpka_properties_backend.py  test_openmm_core_backend.py  test_openmm_openff_backend.py  test_openmm_openff_env_file.py  test_openmm_openff_env_script.py  test_openmm_openff_no_tasks.py  test_opera_env_script.py  test_opera_properties_backend.py  test_packaging.py  test_physchem_task_scripts.py  test_property_answer_extraction.py  test_property_calculation_evaluator.py  test_property_calculation_tasks.py  test_public_api.py  test_rdkit_descriptor_backend.py  (+35 more)
verifier_grounded_benchmark/: README.md  __init__.py  evaluator.py  io.py  registry.py  resources.py  track.py
verifiers/: atomisticskills.py  atomisticskills_backend.py  registry.py  scoring.py  small_molecule_rdkit.py
(+371 files in other folders)
