[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifier-grounded-benchmark"
version = "0.1.0"
description = "Verifier-grounded chemical benchmark environment and tooling."
requires-python = ">=3.12,<3.13"
dependencies = [
    "admet-ai==2.0.1",
    "ase==3.28.0",
    "cclib==1.8.1",
    "chembl-webresource-client==0.10.9",
    "mp-api==0.46.1",
    "ord-schema==0.6.5",
    "pymatgen==2026.5.4",
    "pyyaml==6.0.3",
    "rdkit==2026.3.2",
]

[project.optional-dependencies]
materials = [
    "matgl==4.0.2",
]

[project.scripts]
vgb-score = "verifier_grounded_benchmark.cli.score_answers:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
materials = [
    "matgl==4.0.2",
]

[tool.uv]
package = true

[tool.hatch.build]
exclude = [
    "/tasks/xtb_xyz/calibration_answers.jsonl",
    "/tasks/xtb_xyz/calibration_manifest.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["benchmark", "verifiers", "verifier_grounded_benchmark", "vgb"]

[tool.hatch.build.targets.wheel.force-include]
"tasks/rdkit_baseline" = "tasks/rdkit_baseline"
"tasks/xtb_xyz/sample_answers.jsonl" = "tasks/xtb_xyz/sample_answers.jsonl"
"tasks/xtb_xyz/tasks.yaml" = "tasks/xtb_xyz/tasks.yaml"
"tasks/xtb_xyz/verifier_specs.yaml" = "tasks/xtb_xyz/verifier_specs.yaml"

[tool.pytest.ini_options]
pythonpath = ["."]
