[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifier-grounded-benchmark"
version = "0.2.0"
description = "Verifier-grounded chemical benchmark environment and tooling."
requires-python = ">=3.12,<3.13"
dependencies = [
    "admet-ai==2.0.1",
    "pyyaml==6.0.3",
    "rdkit==2026.3.2",
]

[project.optional-dependencies]
future-backends = [
    "ase==3.28.0",
    "cclib==1.8.1",
    "chembl-webresource-client==0.10.9",
    "mp-api==0.46.1",
    "ord-schema==0.6.5",
]
materials = [
    "matgl==4.0.2",
    "pymatgen==2026.5.4",
]
torchani = [
    "ase==3.28.0",
    "torchani==2.8.2",
]
mace = [
    "ase==3.28.0",
    "mace-torch==0.3.16",
    "pymatgen==2026.5.4",
]

[project.scripts]
vgb-score = "verifier_grounded_benchmark.cli.score_answers:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
future-backends = [
    "ase==3.28.0",
    "cclib==1.8.1",
    "chembl-webresource-client==0.10.9",
    "mp-api==0.46.1",
    "ord-schema==0.6.5",
]
materials = [
    "matgl==4.0.2",
    "pymatgen==2026.5.4",
]
torchani = [
    "ase==3.28.0",
    "torchani==2.8.2",
]
mace = [
    "ase==3.28.0",
    "mace-torch==0.3.16",
    "pymatgen==2026.5.4",
]

[tool.uv]
package = true

[tool.hatch.build]
exclude = [
    "/releases/",
    "/src/verifier_grounded_benchmark/task/calibration/",
    "/src/verifier_grounded_benchmark/task/packs/experimental/",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/verifier_grounded_benchmark",
    "src/vgb",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
